--- a/ClientBookApi/package.json
+++ b/ClientBookApi/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.15.5",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.1",
     "jest": "^29.4.3",
