--- a/ClientBookApi/tsconfig.json
+++ b/ClientBookApi/tsconfig.json
@@ -1,3 +1,4 @@
+// tsconfig.json
 {
   "compilerOptions": {
     "target": "es2016",
@@ -12,6 +13,6 @@
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false
   },
-  "include": ["src"],
+  "include": ["src", "app.ts"],
   "exclude": ["node_modules"]
 }
