--- a/clientbookapp/package.json
+++ b/clientbookapp/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
+    "react-icons": "^4.8.0",
     "sweetalert2": "^11.7.3",
     "sweetalert2-react-content": "^5.0.7",
     "typescript": "5.0.2",
