--- a/clientbookapp/package.json
+++ b/clientbookapp/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
     "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
     "styled-components": "^5.3.9",
     "sweetalert2": "^11.7.3",
     "sweetalert2-react-content": "^5.0.7",
